// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stats should render with state 1`] = `
<ng-ais-stats
  cx={[Function Function]}
  platformId={[Function String]}
  searchInstance={[Function NgAisInstance]}
  state={[Function Object]}
  template="undefined"
  updateState={[Function Function]}
>
  
      <div
    class="ais-Stats"
  >
    
        
    
    
  
        
    
    <span
      class="ais-Stats-text"
    >
      
          100 results found in 123ms.
        
    </span>
    
      
  </div>
    
</ng-ais-stats>
`;

exports[`Stats should render without state 1`] = `
<ng-ais-stats
  cx={[Function Function]}
  platformId={[Function String]}
  searchInstance={[Function NgAisInstance]}
  state={[Function Object]}
  template="undefined"
  updateState={[Function Function]}
>
  
      <div>
    
        
    
    
  
        
    
    
      
  </div>
    
</ng-ais-stats>
`;
